--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "streambot",
+	"name": "bjkbot",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -8,7 +8,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"bin": {
-		"streambot": "index.js"
+		"bjkbot": "index.js"
 	},
 	"author": "",
 	"license": "ISC",
