--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "index.js",
 	"preferGlobal": true,
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"lint": "eslint ./",
+		"lint:watch": "esw ./ -w --changed"
 	},
 	"bin": {
 		"bjkbot": "index.js"
@@ -18,5 +20,12 @@
 		"lodash": "^4.17.4",
 		"prop-types": "^15.5.10",
 		"sqlite": "^2.8.0"
+	},
+	"devDependencies": {
+		"eslint": "^4.9.0",
+		"eslint-config-airbnb-base": "^12.0.2",
+		"eslint-config-google": "^0.9.1",
+		"eslint-config-node-style-guide": "^3.0.0",
+		"eslint-plugin-import": "^2.7.0"
 	}
 }
