--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"discord.js": "^11.1.0",
 		"discord.js-commando": "^0.9.0",
+		"googleapis": "^23.0.0",
 		"lodash": "^4.17.4",
 		"prop-types": "^15.5.10",
 		"sqlite": "^2.8.0"
