--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"googleapis": "^23.0.0",
 		"lodash": "^4.17.4",
 		"prop-types": "^15.5.10",
-		"sqlite": "^2.8.0"
+		"sqlite": "^2.8.0",
+		"uuid": "^3.1.0"
 	},
 	"devDependencies": {
 		"eslint": "^4.9.0",
