--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"googleapis": "^23.0.0",
 		"lodash": "^4.17.4",
 		"prop-types": "^15.5.10",
+		"request": "^2.83.0",
 		"sqlite": "^2.8.0",
 		"uuid": "^3.1.0"
 	},
