--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
 	"dependencies": {
 		"discord.js": "^11.1.0",
 		"discord.js-commando": "^0.9.0",
+		"ffmpeg-binaries": "^3.2.2-3",
 		"googleapis": "^23.0.0",
 		"lodash": "^4.17.4",
+		"opusscript": "0.0.6",
 		"prop-types": "^15.5.10",
 		"request": "^2.83.0",
 		"sqlite": "^2.8.0",
-		"uuid": "^3.1.0"
+		"uuid": "^3.1.0",
+		"ytdl-core": "^0.18.7"
 	},
 	"devDependencies": {
 		"eslint": "^4.9.0",
